// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Fade> -> delay] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "zce4wa",
    "next": undefined,
    "styles": "visibility:visible;;opacity:1;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
  Object {
    "map": undefined,
    "name": "154hx1q",
    "next": undefined,
    "styles": "transition-delay:3000ms;",
  },
]
`;

exports[`<Fade> -> from, to]: 0.2 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "kd7g2q",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0.2;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;

exports[`<Fade> -> from, to]: 0.8 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "8gwbhv",
    "next": undefined,
    "styles": "visibility:visible;;opacity:0.8;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;

exports[`<Fade> -> hide [controlled] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "zce4wa",
    "next": undefined,
    "styles": "visibility:visible;;opacity:1;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;

exports[`<Fade> -> hide: hidden 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;

exports[`<Fade> -> hide: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "zce4wa",
    "next": undefined,
    "styles": "visibility:visible;;opacity:1;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;

exports[`<Fade> -> show [controlled] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;

exports[`<Fade> -> show 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "zce4wa",
    "next": undefined,
    "styles": "visibility:visible;;opacity:1;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;

exports[`<Fade> -> toggle [controlled] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "zce4wa",
    "next": undefined,
    "styles": "visibility:visible;;opacity:1;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;

exports[`<Fade> -> toggle: hidden [2] 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;

exports[`<Fade> -> toggle: hidden 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "8u2raa",
    "next": undefined,
    "styles": "visibility:hidden;;opacity:0;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;

exports[`<Fade> -> toggle: visible 1`] = `
Array [
  Object {
    "map": undefined,
    "name": "zce4wa",
    "next": undefined,
    "styles": "visibility:visible;;opacity:1;",
  },
  Object {
    "map": undefined,
    "name": "1nywrpr",
    "next": undefined,
    "styles": "transition-duration:320ms;",
  },
  Object {
    "map": undefined,
    "name": "opk20j",
    "next": undefined,
    "styles": "transition-timing-function:linear;",
  },
  Object {
    "map": undefined,
    "name": "m616m3",
    "next": undefined,
    "styles": "transition-property:visibility, opacity;",
  },
]
`;
